--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -29,16 +29,16 @@
             {% assign ingredient_handle = ingredient | downcase | replace: ' ', '-' %}
             <img class="product-suppliment-mb" src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
             <div id="health-benefits-{{ index }}" class="item active always-active" data-title="{{ ingredient }}">
-                {% for ingridientData in product.metafields.custom.ingredients_data.value %}     
+                   
                     <div class="health-benefits item-content">      
-                            <div class="subtitle-data">Impact:</div>
-                            <p class="impact-desc">{{ ingridientData.impact }}</p>
-                            <div class="subtitle-data">Active compound:</div>
-                            <p class="impact-desc">{{ ingridientData.compound }}</p>
-                            <div class="subtitle-data">Research:</div>
-                            <p class="impact-desc">{{ ingridientData.recearch }}</p>                 
+                        {% for highlight in product.metafields.custom.ingredients_data.value %}
+                          <div class="highlight">
+                            <div class="highlight-icon">{{ ingridientData.impact }}</div>
+                            <p><b>{{ ingridientData.compound }}</b><br>{{ ingridientData.recearch }}</p>
+                          </div>
+                        {% endfor %}                  
                     </div>
-                {% endfor %}              
+                             
             </div>
            
         {% endfor %}
