--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -22,10 +22,10 @@
             <div id="health-benefits-{{ index }}" class="item active always-active" data-title="{{ ingredient }}">
                    
                     <div class="health-benefits item-content">      
-                        {% for ingridientData in product.metafields.custom.ingredients_data.value %}
+                        {% for ingredientData in product.metafields.custom.ingredients_data.value %}
                           <div class="highlight">
-                            <div class="highlight-icon">{{ ingridientData.impact }}</div>
-                            <p><b>{{ ingridientData.compound }}</b><br>{{ ingridientData.recearch }}</p>
+                            <div class="highlight-icon">{{ ingredientData.impact }}</div>
+                            <p><b>{{ ingredientData.compound }}</b><br>{{ ingredientData.recearch }}</p>
                           </div>
                         {% endfor %}                  
                     </div>
