--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -19,7 +19,7 @@
         {% for ingredient in product.metafields.custom.ingredients_data.value %}  
             {% assign ingredient_handle = ingredient.title | downcase | replace: ' ', '-' %}
             <img class="product-suppliment-mb" src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
-            <div id="health-benefits-{{ index }}" class="item active always-active" data-title="{{ ingredient }}">
+            <div id="health-benefits-{{ index }}" class="item active" data-title="{{ ingredient }}">
                    
                     <div class="health-benefits item-content">      
                         {% for ingredientData in product.metafields.custom.ingredients_data.value %}
