--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -20,20 +20,14 @@
             {% assign ingredient_handle = ingredient.title | downcase | replace: ' ', '-' %}
             <img class="product-suppliment-mb" src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
             <div id="ingredients-{{ index }}" class="item" data-title="{{ ingredient }}">
-                   
                     <div class="ingredients item-content">      
-                        {% for ingredientData in product.metafields.custom.ingredients_data.value %}
                           <div class="highlight">
                             <div class="highlight-icon">{{ ingredientData.impact }}</div>
-                            <p><b>{{ ingredientData.compound }}</b><br>{{ ingredientData.recearch }}</p>
+                            <p><b>{{ ingredientData.compound }}</b><br>{{ ingredientData.research }}</p>
                           </div>
-                        {% endfor %}                  
                     </div>
-                             
             </div>
-           
         {% endfor %}
-
       </div>
     </div>
   </div>
