--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -21,10 +21,7 @@
       <img class="product-suppliment-mb" src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
       <div id="ingredients-{{ index }}" class="item" data-title="{{ ingredient }}">
           <div class="ingredients item-content">      
-            <div class="highlight">
-              <div class="highlight-icon">{{ ingredientData.impact }}</div>
-              <p><b>{{ ingredientData.compound }}</b><br>{{ ingredientData.research }}</p>
-            </div>
+            <div class="impact">{{ ingredient.impact }}</div>
           </div>
       </div>
     {% endfor %}
