--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -6,7 +6,7 @@
         <ul>
           {% for ingredient in product.metafields.custom.ingredients_data.value %}       
             <li><a href="#health-benefits-{{ index }}" class="active">
-              {% assign ingredient_handle = ingredient | downcase | replace: ' ', '-' %}
+              {% assign ingredient_handle = ingredient.title | downcase | replace: ' ', '-' %}
               <img src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
               {{ ingredient.title }}
             <i>></i>
