--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -1,11 +1,11 @@
 
-<section class="curalin-pack-ingredients-section instance-{{ index }}">
+<section class="curalin-pack-ingredients-section">
   <div class="container">
     <div class="tabbed-content tabs-side">
       <nav class="tabs">
         <ul>
           {% for ingredient in product.metafields.custom.ingredients_data.value %}       
-            <li><a href="#health-benefits-{{ index }}" class="active">
+            <li><a href="#health-benefits" class="active">
               {% assign ingredient_handle = ingredient.title | downcase | replace: ' ', '-' %}
               <img src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
               {{ ingredient.title }}
@@ -19,7 +19,7 @@
         {% for ingredient in product.metafields.custom.ingredients_data.value %}  
           {% assign ingredient_handle = ingredient.title | downcase | replace: ' ', '-' %}
           <img class="product-suppliment-mb" src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
-          <div id="ingredients-{{ index }}" class="item" data-title="{{ ingredient }}">
+          <div id="ingredients" class="item" data-title="{{ ingredient }}">
             
           </div>
         {% endfor %}
