--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -20,7 +20,9 @@
           {% assign ingredient_handle = ingredient.title | downcase | replace: ' ', '-' %}
           <img class="product-suppliment-mb" src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
           <div id="ingredients" class="item" data-title="{{ ingredient.title }}">
-            
+            <div class="ingredients item-content">      
+              <div class="impact">{{ ingredient.impact }}</div>
+            </div>
           </div>
         {% endfor %}
       </div>
