--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -407,14 +407,14 @@
   });
 
   function tabControl() {
-    var tabs = $('.curalin-pack-ingredients-section.instance-{{ index }} .tabbed-content').find('.tabs');
+    var tabs = $('.curalin-pack-ingredients-section .tabbed-content').find('.tabs');
     if(tabs.is(':visible')) {
     tabs.find('a').on('click', function(event) {
       event.preventDefault();
       var target = $(this).attr('href'),
         tabs = $(this).parents('.tabs'),
         buttons = tabs.find('a'),
-        item = tabs.parents('.curalin-pack-ingredients-section.instance-{{ index }} .tabbed-content').find('.item');
+        item = tabs.parents('.curalin-pack-ingredients-section .tabbed-content').find('.item');
       buttons.removeClass('active');
       item.removeClass('active');
       $(this).addClass('active');
