--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -19,7 +19,7 @@
         {% for ingredient in product.metafields.custom.ingredients_data.value %}  
           {% assign ingredient_handle = ingredient.title | downcase | replace: ' ', '-' %}
           <img class="product-suppliment-mb" src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
-          <div id="ingredients-{{ ingredient.title }}" class="item {% if forloop.first %}active{% endif %}" data-title="{{ ingredient.title }}">
+          <div id="ingredients-{{ ingredient.title }}" class="item {% if forloop.first %}active{% endif %}" data-title="{{ ingredient_handle }}">
             <div class="ingredients item-content">      
               <div class="impact">{{ ingredient.impact }}</div>
             </div>
