--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -20,7 +20,8 @@
           {% assign ingredient_handle = ingredient.title | downcase | replace: ' ', '-' %}
           <img class="product-suppliment-mb" src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
           <div id="ingredients-{{ ingredient_handle }}" class="item {% if forloop.first %}active{% endif %}" data-title="{{ ingredient.title }}">
-            <div class="ingredients item-content">      
+            <div class="ingredients item-content"> 
+              <div class="title-impact">Impact</div>     
               <div class="impact">{{ ingredient.impact }}</div>
               <img src="{{ "product-supplement-ingredients-molecule-" | append: ingredient_handle | append: ".png" | asset_url }}" width="1172" height="405" alt="Ingredient2" loading="lazy">
             </div>
@@ -43,8 +44,15 @@
     position: absolute;
   }
 
-  .title-data {
-
+  .title-impact {
+    font-family: 'DM Sans';
+        font-style: italic;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+        letter-spacing: -0.01em;
+        text-decoration-line: underline;
+        color: #5E8F8F;
   }
 
   
