--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -54,6 +54,15 @@
         text-decoration-line: underline;
         color: #5E8F8F;
   }
+  .impact {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: -0.01em;
+    color: #191A1E;
+  }
 
   
   #supplement-page section.curalin-pack-ingredients-section .titles {
