--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -26,6 +26,8 @@
               <div class="title-impact">Active compound:</div>     
               <div class="impact">{{ ingredient.compound }}</div>
               <img src="{{ "product-supplement-ingredients-molecule-" | append: ingredient_handle | append: ".png" | asset_url }}" width="1172" height="405" alt="Ingredient2" loading="lazy">
+              <div class="title-impact">Research:</div>     
+              <div class="impact">{{ ingredient.research }}</div>
             </div>
           </div>
         {% endfor %}
