--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -8,7 +8,7 @@
             {% assign ingredient_handle = ingredient.title | downcase | replace: ' ', '-' %}
             <li><a href="#ingredients-{{ ingredient_handle }}" {% if forloop.first %}class="active"{% endif %}>
               <img src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
-              {{ ingredient.title }}
+              <span class="main-titles">{{ ingredient.title }}</span>
               <i>></i>
             </a></li>     
           {% endfor %}
