--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -326,6 +326,7 @@
 
     .curalin-pack-ingredients-section .tabbed-content.tabs-side .tabs li {
     display: flex;
+    min-width: 340px;
     }
   }
 
