--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -1,4 +1,14 @@
 
+<section id="ingredients-curalin-section">
+  <div class="container">
+    <div class="curalin-titles">
+      <h2>Unleash the Power of 9</h2>
+
+    </div>
+  </div>
+</section>
+
+
 <section class="curalin-pack-ingredients-section">
   <div class="container">
     <div class="tabbed-content tabs-side">
@@ -35,6 +45,28 @@
     </div>
   </div>
 </section>
+
+
+<style>
+  #ingredients-curalin-section .container .curalin-titles h2 {
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: 48px;
+    color: #404733;
+  }
+
+  @media screen and (max-width: 768px) {
+    #ingredients-curalin-section .container .curalin-titles h2 {
+      font-size: 8vw;
+    }
+
+    #ingredients-curalin-section .container .curalin-titles .curalin-subtitle {
+      font-size: 4vw;
+    }
+  }
+
+
+</style>
 
 {% if isCuralinRender %}
   <style>
