--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -35,7 +35,8 @@
               <div class="impact">{{ ingredient.impact }}</div>
               <div class="title-impact">Active compound:</div>     
               <div class="impact">{{ ingredient.compound }}</div>
-              <img src="{{ "product-supplement-ingredients-molecule-" | append: ingredient_handle | append: ".png" | asset_url }}" width="305" height="135"  alt="Ingredient2" loading="lazy">
+              <div class="molecule"><img src="{{ "product-supplement-ingredients-molecule-" | append: ingredient_handle | append: ".png" | asset_url }}" width="305" height="135"  alt="Ingredient2" loading="lazy"></div>
+              
               <div class="title-impact">Research:</div>     
               <div class="impact">{{ ingredient.research }}</div>
             </div>
