--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -213,6 +213,7 @@
 
   .curalin-pack-ingredients-section .ingredients {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     flex-wrap: wrap;
     gap: 10px;
