--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -219,6 +219,11 @@
     gap: 10px;
   }
 
+  .molecule {
+    display: flex;
+    justify-content: center;
+  }
+
   .curalin-pack-ingredients-section .ingredient {
     width: 30%;
     display: flex;
