--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -319,6 +319,7 @@
 
   .curalin-pack-ingredients-section .tabbed-content .item.active .item-content {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     opacity: 1;
     visibility: visible;
