--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -445,6 +445,11 @@
     }
 
     @media screen and (max-width: 500px) {
+
+    .main-titles{
+      font-size: 16px;
+      line-height: 2.2em;
+    }
     .curalin-pack-ingredients-section .item::after {
       top: 3vw;
       width: 5vw;
