--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -294,9 +294,11 @@
     border-top: 1px solid var(--light-green);
     cursor: pointer;
     font-weight: bold;
-    padding: 0.5em;
+    padding: 0.5em 0.5em 0.5em 5em;
     display: block;
     text-align: center;
+    font-size: 4vw;
+    line-height: 2.2em;
   }
 
   .curalin-pack-ingredients-section .item.active .item-content {
@@ -448,10 +450,6 @@
 
     @media screen and (max-width: 500px) {
 
-    .main-titles{
-      font-size: 16px;
-      line-height: 2.2em;
-    }
     .curalin-pack-ingredients-section .item::after {
       top: 3vw;
       width: 5vw;
