--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -294,11 +294,9 @@
     border-top: 1px solid var(--light-green);
     cursor: pointer;
     font-weight: bold;
-    padding: 0.5em 0.5em 0.5em 5em;
+    padding: 0.5em;
     display: block;
     text-align: center;
-    font-size: 4vw;
-    line-height: 2.2em;
   }
 
   .curalin-pack-ingredients-section .item.active .item-content {
@@ -444,6 +442,13 @@
     }
     .curalin-pack-ingredients-section .health-benefits .health-benefit p {
     font-size: 2.5vw;
+    }
+
+    .curalin-pack-ingredients-section .item::before {
+      text-align: left;
+      padding: 0.5em 0.5em 0.5em 5em;
+      font-size: 4vw;
+      line-height: 2.2em;
     }
 
     }
