--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -2,7 +2,7 @@
     <div class="background-container">
     <div class="container">
         <div class="life-wrapper">
-
+            <div class="life-title">Start a  healthier life today</div>
         </div>
     </div>
     </div>
@@ -16,9 +16,24 @@
     }
     #healthier-life .background-container  {
         background: #E8E8B0;   
+        
+        
+    }
+
+    #healthier-life .background-container .container .life-wrapper {
         padding: 20px 0;
         display: flex;
         justify-content: space-between;
-        gap: 50px;
     }
+
+    #healthier-life .background-container .container .life-wrapper .life-title {
+        font-family: 'PP Radio Grotesk';
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 58px;
+        letter-spacing: -0.03em;
+        color: #404733;
+    }
+
+
 </style>
