--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -36,4 +36,13 @@
     }
 
 
+    @media screen and (max-width: 768px) {
+        #healthier-life .background-container .container .life-wrapper .life-title {  
+            font-size: 33px;
+            line-height: 33px;
+           
+        }
+    }
+
+
 </style>
