--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="life-wrapper">
             <div class="life-title">Start a  healthier life today</div>
-            
+
         </div>
     </div>
     </div>
@@ -39,7 +39,7 @@
 
     @media screen and (max-width: 768px) {
         #healthier-life .background-container .container .life-wrapper .life-title {  
-            font-size: 33px;
+            font-size: 6vw;
             line-height: 33px;
            
         }
