--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -3,6 +3,9 @@
     <div class="container">
         <div class="life-wrapper">
             <div class="life-title">Start a  healthier life today</div>
+           
+              <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a>
+          
 
         </div>
     </div>
