--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -39,7 +39,24 @@
         color: #404733;
     }
 
-    
+    #healthier-life .background-container .container .life-wrapper .cta-btn {
+        font-weight: 100;
+        background: var(--dark-green);
+        text-align: center;
+        border: 1px solid var(--dark-green);
+        border-radius: 4px;
+        font-size: clamp(20px, 2vw, 18px);
+        letter-spacing: ;
+        color: white;
+        padding: 10px 30px;
+        box-shadow: 0px 5px 12.5px rgb(0 0 0 / 15%);
+        transition: unset;
+        margin-bottom: 20px;
+        width: 250px;
+        margin-top: 40px;
+    }
+
+
 
 
     @media screen and (max-width: 768px) {
