--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -41,13 +41,13 @@
 
     #healthier-life .background-container .container .life-wrapper .cta-btn {
         font-weight: 100;
-        background: var(--dark-green);
+        background: var(--orange);
         text-align: center;
-        border: 1px solid var(--dark-green);
+        border: 1px solid var(--orange);
         border-radius: 4px;
         font-size: clamp(20px, 2vw, 18px);
         letter-spacing: ;
-        color: white;
+        color: var(--dark-green);
         padding: 10px 30px;
         box-shadow: 0px 5px 12.5px rgb(0 0 0 / 15%);
         transition: unset;
