--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -500,3 +500,9 @@
     }
   }
   </script>
+
+  <script>
+  $( ".item" ).click(function() {
+    $( this ).toggleClass( "active" );
+  });
+  </script>
