--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -484,7 +484,8 @@
       buttons.removeClass('active');
       item.removeClass('active');
       $(this).addClass('active');
-      $(target).addClass('active');
+      $( this ).toggleClass( "active" );
+      {% comment %} $(target).addClass('active'); {% endcomment %}
     });
     } else {
     $('.item').on('click', function() {
@@ -495,14 +496,14 @@
       container.find('.tabs a').removeClass('active');
       items.removeClass('active');
       $(this).addClass('active');
-      container.find('.tabs a[href$="#'+ currId +'"]').addClass('active');
+      container.find('.tabs a[href$="#'+ currId +'"]').toggleClass('active');
     });
     }
   }
   </script>
 
-  <script>
+  {% comment %} <script>
   $( ".item" ).click(function() {
     $( this ).toggleClass( "active" );
   });
-  </script>
+  </script> {% endcomment %}
