--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -482,9 +482,9 @@
         buttons = tabs.find('a'),
         item = tabs.parents('.curalin-pack-ingredients-section .tabbed-content').find('.item');
       buttons.toggleClass('active');
-      item.removeClass('active');
-      $(this).addClass('active');
-      $(target).addClass('active'); 
+      
+      $(this).toggleClass('active');
+     
     });
     } else {
     $('.item').on('click', function() {
