--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -487,16 +487,18 @@
       $(target).addClass('active'); 
     });
     } else {
-    $('.item').on('click', function() {
-      var container = $(this).parents('.tabbed-content'),
-        currId = $(this).attr('id'),
-        items = container.find('.item');
-        console.log(items);
-      container.find('.tabs a').removeClass('active');
-      items.removeClass('active');
-      $(this).addClass('active');
-      container.find('.tabs a[href$="#'+ currId +'"]').addClass('active');
-    });
+   $(".item").click(function(){
+     $(this).next(".tab-content").toggleClass("active");
+   });
     }
   }
   </script>
+
+
+  {% comment %} <script>
+    $(document).ready(function(){
+      $(".item").click(function(){
+        $(this).next(".tab-content").toggleClass("active");
+      });
+    });
+  </script> {% endcomment %}
