--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -488,7 +488,7 @@
     });
     } else {
    $(".item").click(function(){
-     $(this).next(".tab-content").toggleClass("active");
+     $(this).next(".tabs a").toggleClass("active");
    });
     }
   }
