--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -495,7 +495,7 @@
       container.find('.tabs a').removeClass('active');
       items.removeClass('active');
       $(this).addClass('active');
-      container.find('.tabs a[href$="#'+ currId +'"]').toggleClass('active');
+      container.find('.tabs a[href$="#'+ currId +'"]').addClass('active');
     });
     }
   }
