--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -491,7 +491,8 @@
       var container = $(this).parents('.tabbed-content'),
         currId = $(this).attr('id'),
         items = container.find('.item');
-        console.log("items: " items);
+        console.log("items: ")
+        console.log(items);
       container.find('.tabs a').removeClass('active');
       items.removeClass('active');
       $(this).addClass('active');
