--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -42,6 +42,7 @@
     #healthier-life .background-container .container .life-wrapper .cta-btn {
         font-weight: 400;
         background: var(--orange);
+        border-radius: 5px;
         text-align: center;
         border: 1px solid var(--orange);
         border-radius: 4px;
@@ -54,6 +55,11 @@
         margin-bottom: 20px;
         width: 250px;
         margin-top: 40px;
+    }
+
+    #healthier-life .background-container .container .life-wrapper .cta-btn:hover {
+        background: #e9a735;
+        border-color: #e9a735;
     }
 
 
