--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -66,8 +66,11 @@
 
 
     @media screen and (max-width: 768px) {
+        #healthier-life .background-container .container .life-wrapper {
+            flex-direction: column;
+        }
         #healthier-life .background-container .container .life-wrapper .life-title {  
-            font-size: 6vw;
+            font-size: 9vw;
             line-height: 33px;
            
         }
