--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -2,12 +2,12 @@
     <div class="background-container">
     <div class="container">
         <div class="life-wrapper">
-            <div class="life-title">Start a  healthier life today</div>
-           
+            <div class="life-title">Start a  healthier life today</div>    
               <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a>
-          
-
         </div>
+    <div class="life-img">
+        <img class="main-img" src="{{ 'healthier-life-today-bottle.png' | asset_url }}" width="976" height="976" alt="bottle-hand-mask">
+    </div>
     </div>
     </div>
 </section>
@@ -60,6 +60,10 @@
     #healthier-life .background-container .container .life-wrapper .cta-btn:hover {
         background: #e9a735;
         border-color: #e9a735;
+    }
+
+    #healthier-life .background-container .container .life-img {
+        position: absolute;
     }
 
 
