--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -16,10 +16,11 @@
 <style>
 
     #healthier-life {
-        position: relative;
+        
     }
     #healthier-life .background-container  {
-        background: #E8E8B0;   
+        background: #E8E8B0; 
+        position: relative;  
         
         
     }
@@ -62,8 +63,9 @@
         border-color: #e9a735;
     }
 
-    #healthier-life .background-container .container .life-img {
+    #healthier-life .background-container .life-img {
         position: absolute;
+
     }
 
 
