--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -64,7 +64,7 @@
         border-color: #e9a735;
     }
 
-    #healthier-life .background-container .life-img {
+    #healthier-life .background-container .life-img img {
         position: absolute;
 
     }
