--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -28,6 +28,14 @@
         
     }
 
+    #healthier-life .background-container .life-img {
+        max-width: 30%;
+        position: absolute;
+        right: 0;
+        top: -108px;     
+        }
+  
+
     #healthier-life .background-container .container .life-wrapper {
         padding: 20px 0;
         display: flex;
