--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -35,9 +35,10 @@
   
 
     #healthier-life .background-container .container .life-wrapper {
-        padding: 20px 0;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
     }
 
     #healthier-life .background-container .container .life-wrapper .life-title {
