--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -36,7 +36,7 @@
 
     #healthier-life .background-container .container .life-wrapper {
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
         gap: 20px;
     }
