--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -81,12 +81,16 @@
     @media screen and (max-width: 1100px) {
         #healthier-life .background-container .container .life-wrapper {
             flex-direction: column;
+            align-items: flex-start;
+            max-width: 74%;
+            gap: unset;
         }
         #healthier-life .background-container .container .life-wrapper .life-title {  
-            font-size: 9vw;
-            line-height: 33px;
+                font-size: 7vw;
+                line-height: 7vw;
+                padding-top: 3vw;
+            }
            
-        }
     }
 
 
