--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -82,13 +82,26 @@
         #healthier-life .background-container .container .life-wrapper {
             flex-direction: column;
             align-items: flex-start;
-            max-width: 74%;
+            max-width: 45%;
             gap: unset;
         }
         #healthier-life .background-container .container .life-wrapper .life-title {  
-                font-size: 7vw;
+                font-size: 6vw;
                 line-height: 7vw;
                 padding-top: 3vw;
+            }
+
+            #healthier-life .background-container .life-img {
+                max-width: 53%;
+                top: -6vw;
+            }
+
+
+            #healthier-life .background-container .container .life-wrapper .cta-btn {
+                padding: 1vw 2vw;               
+                margin-bottom: unset;
+                width: 50vw;
+                margin-top: unset;
             }
            
     }
