--- a/snippets/start-healthier-life.liquid
+++ b/snippets/start-healthier-life.liquid
@@ -92,7 +92,7 @@
             }
 
             #healthier-life .background-container .life-img {
-                max-width: 53%;
+                max-width: 43%;
                 top: -6vw;
             }
 
@@ -102,6 +102,13 @@
                 width: 50vw;
             }
            
+    }
+
+    @media screen and (max-width: 768px) {
+        #healthier-life .background-container .life-img {
+            max-width: 53%;
+            }
+
     }
 
 
