--- a/templates/page.glucose-support.liquid
+++ b/templates/page.glucose-support.liquid
@@ -1,4 +1,5 @@
 {% section 'glucose-support-banner' %}
 {% section 'glucose-support-white-bg-content' %}
+{% render 'start-healthier-life', ctaButtonLink: "/collections", ctaTitle: "SHOP NOW" %}
 {% render 'powerful-natural-ingredients' %}  
 {% section 'what-our-clients-say' %}
