--- a/sections/what-our-clients-say.liquid
+++ b/sections/what-our-clients-say.liquid
@@ -109,6 +109,11 @@
 </div>
 
 <style>
+
+.bottom-line {
+  position: unset !important;
+}
+  
   .slide-control {
     display: flex;
     justify-content: center;
