--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -1,7 +1,7 @@
 
 <div class="container">
     
-      <div class="changing-experiences">
+      <div class="featured-products-new">
         <div class="quote-slider">
           <div class="swiper">
             <div class="swiper-wrapper">
@@ -46,7 +46,7 @@
     .mini-wrap {
      
     }
-    .changing-experiences {
+    .featured-products-new {
     
       background: rgba(232,	232,	176, .2);
     }
@@ -107,7 +107,7 @@
   
     @media screen and (max-width: 768px) {
   
-    .changing-experiences {
+    .featured-products-new {
       width: 100%;
     }
   
