--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -1,4 +1,5 @@
 
+<div class="container">
     
       <div class="featured-products-new">
         <div class="quote-slider">
@@ -36,7 +37,8 @@
           </div>
         </div>
       </div>
-
+  </div> 
+  
   <style>
   
   
