--- a/snippets/featured-new-products.liquid
+++ b/snippets/featured-new-products.liquid
@@ -6,6 +6,13 @@
 
 " | split: '|' %}
 
+{% assign doctors = 'lp-aio-michel.png*Dr. Michael Binder:Functional doctor, author of Cracking The Diabetic Code.
+|lp-aio-nancy.png*Dr. Nancy Russell:Internal Medicine Specialist, North Kansas City Hospital
+|lp-aio-raz.png*Prof. Itamar Raz:World renouned diabetes expert with over 400 published peer-reviewed studies.
+|lp-aio-sarah.png*Dr. Sarah Brewer:Functional doctor, diabetes expert, and author of over 60 books on personal
+health.'
+| split: '|' %}
+
 
 
 
